soup-auth-digest: fix a leak on re-auth

Calling soup_auth_authenticate() on an already-authenticated
SoupAuthDigest would leak the old username and hashed password.

https://bugzilla.gnome.org/show_bug.cgi?id=690142