libsoup/soup-auth-digest.c
@@ -293,6 +293,9 @@ soup_auth_digest_authenticate (SoupAuth *auth, const char *username,
 	SoupAuthDigestPrivate *priv = SOUP_AUTH_DIGEST_GET_PRIVATE (auth);
 	char *bgen;
 
+	g_clear_pointer (&priv->cnonce, g_free);
+	g_clear_pointer (&priv->user, g_free);
+
 	/* Create client nonce */
 	bgen = g_strdup_printf ("%p:%lu:%lu",
 				auth,
